Date-Time: fix readability of week and weekday in the calendar when there is a brand-color available. See #74215

--- a/src/scss/themes/fylr/components/_date-time.scss
+++ b/src/scss/themes/fylr/components/_date-time.scss
@@ -226,7 +226,7 @@
 		&.cui-date-time-month-header {
 			position: relative;
 			background: var(--calendar-static-cells-background);
-			color: var(--brand-color, #{$calendar-static-cells-color});
+			color: var(--brand-color-on-white, #{$calendar-static-cells-color});
 
 			&::after {
 				content: '';
@@ -288,7 +288,7 @@
 	.cui-date-time-week {
 		font-size: $calendar-font-size * 0.8575;
 		background: var(--calendar-static-cells-background);
-		color: var(--brand-color, #{$calendar-static-cells-color});
+		color: var(--brand-color-on-white, #{$calendar-static-cells-color});
 	}
 
 	.cui-date-time-week-title {
@@ -300,7 +300,7 @@
 
 		&:hover {
 			span {
-				--calendar-date-hover-background: rgb(var(--brand-color-RGB), #{$calendar-date-hover-background-opacity});
+				--calendar-date-hover-background: rgb(var(--brand-color-RGB));
 
 				color: var(--brand-foreground-text-color, #{$body-color});
 				background-color: var(--calendar-date-hover-background, #{rgba($calendar-date-active-background, $calendar-date-hover-background-opacity)});
